// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SimpleBarChart rendering renders expected elements 1`] = `
<div
  className="Chart Chart__wrapper"
  id="random-id"
>
  <svg
    className="Chart__chart"
    data-chromatic="ignore"
  >
    <g
      className="Chart__grid"
    >
      <rect />
      <g />
      <g />
    </g>
    <ChartAxes />
    <g
      aria-label="data"
      className="Chart__bars"
      role="group"
    />
    <g
      className="Chart__markers"
    />
    <g
      className="Chart__zero"
    />
  </svg>
  <div
    className="Chart__hintContainer"
  />
</div>
`;

exports[`SimpleBarChart rendering renders expected elements when data loading is set 1`] = `
<div
  className="Chart Chart__wrapper"
  id="random-id"
>
  <svg
    className="Chart__chart"
    data-chromatic="ignore"
  >
    <g
      className="Chart__grid"
    >
      <rect />
      <g />
      <g />
    </g>
    <ChartAxes />
    <g
      aria-label="data"
      className="Chart__bars"
      role="group"
    />
    <g
      className="Chart__markers"
    />
    <g
      className="Chart__zero"
    />
    <LoadingGrid
      gradientId="random-id-loading"
    />
  </svg>
  <div
    className="Chart__hintContainer"
  />
</div>
`;

exports[`SimpleBarChart rendering renders expected elements when optional properties are set 1`] = `
<div
  className="Chart Chart__wrapper TestClass"
  id="random-id"
>
  <svg
    className="Chart__chart"
    data-chromatic="ignore"
  >
    <g
      className="Chart__grid"
    >
      <rect />
      <g />
      <g />
    </g>
    <ChartAxes />
    <g
      aria-label="data"
      className="Chart__bars"
      role="group"
    />
    <g
      className="Chart__markers"
    />
    <g
      className="Chart__zero"
    />
  </svg>
  <Legend
    className="start bottom"
    clickable={true}
    direction="horizontal"
    formatter={[Function]}
    getBgClass={[MockFunction]}
    groups={[]}
  />
  <div
    className="Chart__hintContainer visible"
  >
    test-hint
  </div>
</div>
`;
